fix page jump bug on button hover

--- a/app/globals.css
+++ b/app/globals.css
@@ -196,9 +196,7 @@ input[type=number] {
   /* Firefox */
 }
 
-button {
-  padding: 4px;
-}
+
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
@@ -212,19 +210,15 @@ button {
 
 }
 
-  /* p a:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  } */
-
   a:hover div {
     position: relative;
     transform: translateX(5px);
     transition: transform 300ms;
   }
 
+
   button:hover {
-    border: 2px solid rgba(var(--card-border-rgb), 0.15);  
+    background: linear-gradient(to right, #facc15,#b45309); 
   }
 
 }
